fix table grid border in overflow

--- a/frontend/src/OutputView.css
+++ b/frontend/src/OutputView.css
@@ -57,11 +57,15 @@
 
 .output-view-table {
   flex-shrink: 0;
+  flex-grow: 0;
+  width: 100%;
+  overflow-x: auto;
   --table-cell-width: 100px;
 }
 
 .output-view-table-header {
-  width: 100%;
+  width: fit-content;
+  min-width: 100%;
   border-bottom: 1px solid var(--background-dark-3);
   display: flex;
   flex-direction: row;
@@ -70,10 +74,12 @@
 .output-view-table-header-item {
   width: var(--table-cell-width);
   flex-shrink: 0;
+  border-right: 1px solid var(--background-dark-1);
 }
 
 .output-view-table-body {
-  width: 100%;
+  width: fit-content;
+  min-width: 100%;
 }
 
 .output-view-table-row {
